# echo_CLIP

./: main.py  pyproject.toml  requirements.txt  zero_shot_example.py
