[project]
name = "echo-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub==0.16.4",
    "matplotlib==3.8",
    "numpy==1.24.4",
    "open-clip-torch==2.20.0",
    "opencv-python-headless==4.8.0.76",
    "pillow==10.0.0",
    "scipy==1.12",
    "timm==0.9.5",
    "tokenizers==0.13.3",
    "torch==2.0.1",
    "torchvision==0.15.2",
]
